--- a/client/style.css
+++ b/client/style.css
@@ -125,6 +125,18 @@ body.active
   font-size: 1.4rem;
   border-radius: 5px;
   color: var(--black);
+  align-items: center;
+  background: var(--bg-color);
+  border: .1px solid #4d4d4f;
+}
+
+.header .navbar .Previous
+{
+  padding: 1rem 7rem;
+  font-size: 1.4rem;
+  border-radius: 5px;
+  color: var(--black);
+  align-items: center;
   background: var(--bg-color);
   border: .1px solid #4d4d4f;
 }
